# caption2md

./: ai.py  main.py  pyproject.toml
md/: 10.[5.1.1]--合伙人制度_中文.md  11.[5.2.1]--企业家是企业的核心资产_中文.md  12.[6.1.1]--股权控制_中文.md  13.[6.2.1]--控制董事会_中文.md  14.[6.3.1]--双层股权结构控制_中文.md  15.[6.4.1]--科创板的表决权差异安排_中文.md  16.[7.1.1]--初识风险投资_中文.md  17.[7.2.1]--融资中的控制权博弈_中文.md  18.[7.3.1]--解读“对赌”_中文.md  19.[8.1.1]--第一节小股东的表决权保护_中文.md  2.[1.2.1]--什么是股权_中文.md  20.[8.2.1]--第二节保护小股东_中文.md  21.[9.1.1]--第一节企业家是企业失败的主要原因_中文.md  22.[9.2.1]--第二节刑法对企业家的约束_中文.md  23.[9.3.1]--第三节企业家的自律_中文.md  24.[10.1.1]--第一节股权激励理论_中文.md  25.[10.2.1]--第二节山西票号的“身股制”_中文.md  26.[11.1.1]--第一节股票期权_中文.md  27.[11.2.1]--第二节限制性股票_中文.md  28.[11.3.1]--第三节中国式期股_中文.md  29.[11.4.1]--第四节“华为”的虚拟受限股_中文.md  3.[2.1.1]--为什么”要“设计”股权结构_中文.md  30.[12.1.1]--第一节股权激励要素（一）_中文.md  31.[12.2.1]--第二节股权激励要素（二）_中文.md  32.[12.3.1]--第三节股权激励要素（三）_中文.md  33.[13.1.1]--第一节员工持股理论_中文.md  34.[13.2.1]--第二节美国员工持股_中文.md  35.[13.3.1]--第三节中国员工持股_中文.md  4.[2.2.1]--最好的股权结构_中文.md  5.[3.1.1]--“真功夫”的股权战争_中文.md  6.[3.2.1]--股权平均与公司僵局_中文.md  7.[4.1.1]--“海底捞”的股权结构调整_中文.md  8.[4.1.2]--第二节股权结构调整的原则_中文.md  9.[4.2.1]--股权结构调整的原则_中文.md
output/: 10.[5.1.1]--合伙人制度_中文.ai.md  11.[5.2.1]--企业家是企业的核心资产_中文.ai.md  11.[5.2.1]--企业家是企业的核心资产_中文.md  12.[6.1.1]--股权控制_中文.ai.md  12.[6.1.1]--股权控制_中文.md  13.[6.2.1]--控制董事会_中文.ai.md  13.[6.2.1]--控制董事会_中文.md  14.[6.3.1]--双层股权结构控制_中文.ai.md  14.[6.3.1]--双层股权结构控制_中文.md  15.[6.4.1]--科创板的表决权差异安排_中文.ai.md  15.[6.4.1]--科创板的表决权差异安排_中文.md  16.[7.1.1]--初识风险投资_中文.ai.md  17.[7.2.1]--融资中的控制权博弈_中文.ai.md  17.[7.2.1]--融资中的控制权博弈_中文.md  18.[7.3.1]--解读“对赌”_中文.ai.md  (+35 more)
(+35 files in other folders)
